# V-Rebounder

./: AGENTS.md  README.md  pyproject.toml
.opencode/: HARNESS_CHECKLIST.md  IMPLEMENT.md  PLAN.md
.opencode/skills/btc-backtest-live-workflow/: SKILL.md
docs/pages/: index.md  ml_feature_importance.csv
pages/: parametric_results_5m.csv  timeframe_comparison.csv
scripts/: backtest_5m.py  parametric_study.py
src/v_rebounder/: __init__.py  data_loader.py  detector.py  features.py  models_tree.py  parametric.py  strategy.py
