[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "v-rebounder"
version = "0.1.0"
description = "V-shaped rebound detection and automated trading system for Bitcoin"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "V-Rebounder Team" }
]
dependencies = [
    "polars>=1.0.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "pandas-ta>=0.3.14b",
    "scikit-learn>=1.3.0",
    "xgboost>=2.0.0",
    "lightgbm>=4.0.0",
    "torch>=2.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "tqdm>=4.65.0",
    "pyarrow>=14.0.0",
    "duckdb>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]
ta = [
    "TA-Lib>=0.4.28",
]

[tool.hatch.build.targets.wheel]
packages = ["src/v_rebounder"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
